# Monday-Briefing-Improved-Version-

./: .gitignore  main.py  pyproject.toml
monday_report/api/: endpoints_briefing.py  endpoints_config.py  endpoints_health.py  endpoints_test.py
monday_report/core/: config.py  lifespan.py  scheduler.py
monday_report/models/: city.py  common.py  football.py  weather.py
monday_report/services/: briefing_service.py  email_service.py  football_service.py  geo_service.py  weather_service.py
monday_report/utils/: departements.py  locale_utils.py
